--- a/styles/src.css
+++ b/styles/src.css
@@ -15,10 +15,14 @@ h3 {
 h1 {
   font-size: 96px;
 }
+h2 {
+  font-size: 46px;
+}
 p {
   font-family: var(--default-font);
   font-weight: normal;
   margin: 0;
+  line-height: 30px;
 }
 
 .hero {
