--- a/styles/src.css
+++ b/styles/src.css
@@ -16,13 +16,14 @@ h1 {
   font-size: 96px;
 }
 h2 {
-  font-size: 46px;
+  font-size: 64px;
 }
 p {
   font-family: var(--default-font);
   font-weight: normal;
   margin: 0;
   line-height: 30px;
+  font-size: 16px;
 }
 
 .hero {
@@ -44,4 +45,26 @@ p {
   font-size: 18px;
   padding: 12px 20px;
   margin-top: 50px;
+}
+.project-btn {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  padding: 12px 20px;
+  margin-top: 30px;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 10px;
+  }
+  .description {
+    text-align: center;
+  }
 }
