--- a/styles/src.css
+++ b/styles/src.css
@@ -25,6 +25,19 @@ p {
   line-height: 30px;
   font-size: 16px;
 }
+.about-section h1 {
+  font-size: 55px;
+  line-height: 80px;
+}
+h2 {
+  font-size: 44px;
+}
+.about-section {
+  padding: 160px 20px;
+}
+.about-content {
+  margin: 30px;
+}
 
 .hero {
   background-color: #f9f7fe;
