--- a/styles/src.css
+++ b/styles/src.css
@@ -25,20 +25,23 @@ p {
   line-height: 30px;
   font-size: 16px;
 }
-.about-section h1 {
+.content-section h1 {
   font-size: 55px;
   line-height: 80px;
 }
 h2 {
   font-size: 44px;
 }
-.about-section {
+.content-section {
   padding: 160px 20px;
 }
-.about-content {
+.content {
   margin: 30px;
 }
-
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font);
+}
 .hero {
   background-color: #f9f7fe;
   text-align: center;
