--- a/styles/src.css
+++ b/styles/src.css
@@ -84,3 +84,29 @@ h2 {
     text-align: center;
   }
 }
+.logo {
+  max-height: 50px;
+}
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+  transition: all 100ms ease-in-out;
+}
+nav a :hover,
+nav li.active a {
+  color: var(--branding-color);
+}
