--- a/styles/src.css
+++ b/styles/src.css
@@ -8,7 +8,8 @@ font-family: 'Poppins', sans-serif;*/
 }
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: var(--heading-font);
   font-weight: bold;
 }
@@ -18,12 +19,18 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+  font-size: 48px;
+}
 p {
   font-family: var(--default-font);
   font-weight: normal;
   margin: 0;
   line-height: 30px;
   font-size: 16px;
+}
+footer {
+  margin: 60px 0;
 }
 .content-section h1 {
   font-size: 55px;
@@ -112,4 +119,33 @@ nav li.active a {
 }
 .active {
   color: var(--branding-color) !important;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+footer .email-link :hover {
+  color: var(--branding-color);
+}
+.social-links a {
+  color: var(--branding-color);
+  background-color: #f9f7fe;
+  margin: 0 20px;
+  padding: 15px 20px;
+  font-size: 25px;
+  border-radius: 50px;
+  transition: all 100ms ease-in-out;
+}
+.social-links :hover {
+  color: white;
+  background-color: var(--branding-color);
+}
+.contact-box p {
+  margin: 0;
+}
+.contact-box {
+  background-color: #f9f7fe;
+  padding: 30px 120px;
+  border-radius: 10px;
 }
